--- a/index_05.html
+++ b/index_05.html
@@ -41,14 +41,19 @@
                         <div class="col-md-2 col-sm-3 col-xs-4">
                             <div class="logo_wrap"> <a href="#"><img src="img/logo.png" alt="Sila.FM"></a> креативное агентство звука </div>
                         </div>
-                        <div class="col-md-8 col-sm-7 hidden-xs">
-                            <div class="top_contact"> <i class="fas fa-mobile-alt" aria-hidden="true"></i> (495) 20-435-20 </div>
+                        <div class="col-md-8 hidden-sm hidden-xs">
+                            <div class="top_contact">
+                                <p class="tel"> +7 (800) 55-10-551, +7 (495) 20-43-520, +38 (044) 545-77-13</p>
+                            </div>
                         </div>
-                        <div class="col-md-2 col-sm-2 col-xs-8">
-                            <div class="soc_buttons"> <a href="#"><i class="fab fa-vk"></i></a>
-                                <a href="#"><i class="fab fa-facebook-square"></i></a>
-                                <a href="#"><i class="fab fa-skype"></i></a>
-                                <a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a> </div>
+                        <div class="col-md-2 col-sm-9 col-xs-8">
+                            <div class="soc_buttons">
+                                <a title="vkontakte" href="http://vkontakte.ru/share.php?url=http://sila.fm/&title=%D0%90%D1%83%D0%B4%D0%B8%D0%BE%D1%80%D0%BE%D0%BB%D0%B8%D0%BA%D0%B8%20|%20%D0%A0%D0%B0%D0%B4%D0%B8%D0%BE%D1%80%D0%BE%D0%BB%D0%B8%D0%BA%D0%B8%20|%20%D0%90%D1%83%D0%B4%D0%B8%D0%BE%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D0%B0%20|%20%D0%A0%D0%B0%D0%B4%D0%B8%D0%BE%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D0%B0%20|%20%D0%9E%D0%B7%D0%B2%D1%83%D1%87%D0%BA%D0%B0%20%D0%B2%D0%B8%D0%B4%D0%B5%D0%BE%20|%20Sila.FM"><i class="fab fa-vk"></i></a>
+                                <a title="facebook" href="http://www.facebook.com/share.php?u=http://sila.fm/"><i class="fab fa-facebook-square"></i></a>
+                                <a title="Skype" href="skype:sila.fm"><i class="fab fa-skype"></i></a>
+                                <a title="Viber" href="viber://add?number=+79653161080"><i class="fab fa-viber"></i></a>
+                                <a title="WhatsApp" href="whatsapp://send?phone=+79653161080"> <i class="fab fa-whatsapp"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -57,37 +62,39 @@
                 <nav class="cbp-hsmenu-wrapper" id="cbp-hsmenu-wrapper">
                     <div class="cbp-hsinner">
                         <ul class="cbp-hsmenu">
-                            <li> <a href="index.html">Главная</a> </li>
                             <li>
-                                <a href="index_01.html">Дикторы</a>
+                                <a href="index.html">Главная</a>
+                            </li>
+                            <li>
+                                <a href="#">Дикторы</a>
                                 <ul class="cbp-hssubmenu">
-                                    <li>
-                                        <a href="index_01.html#ex1"><img src="img/ruman.png" alt="img07" /><span>дикторы России</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex5"><img src="img/uaman.png" alt="img08" /><span>дикторы Украины</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex3"><img src="img/foreigner.png" alt="img09" /><span>Иностранные дикторы</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex9"><img src="img/songer.png" alt="img10" /><span>Вокалисты</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex8"><img src="img/parodies.png" alt="img01" /><span>Пародисты</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex7"><img src="img/child.png" alt="img02" /><span>Детские голоса</span></a>
-                                    </li>
+                                    <li> <a href="index_ru.html"><img src="img/ruman.png" alt="img07" /><span>Дикторы России</span></a> </li>
+                                    <li> <a href="index_for.html"><img src="img/foreigner.png" alt="img09" /><span>Иностранные дикторы</span></a> </li>
+                                    <li> <a href="index_ua.html"><img src="img/uaman.png" alt="img08" /><span>Дикторы Украины</span></a> </li>
+                                    <li> <a href="index_voc.html"><img src="img/songer.png" alt="img10" /><span>Вокалисты</span></a> </li>
+                                    <li> <a href="index_par.html"><img src="img/parodies.png" alt="img01" /><span>Пародисты</span></a> </li>
+                                    <li> <a href="index_kid.html"><img src="img/child.png" alt="img02" /><span>Детские голоса</span></a> </li>
                                 </ul>
                             </li>
-                            <li> <a href="#">Услуги</a>
+                            <li>
+                                <a href="#">Услуги</a>
                                 <ul class="cbp-hssubmenu">
-                                    <li> <a href="index_08.html"><img src="img/print.png" alt="img06" /><span>Сценарии</span></a> </li>
-                                    <li> <a href="index_02.html"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a> </li>
-                                    <li> <a href="index_03.html"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a> </li>
-                                    <li> <a href="index_04.html"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a> </li>
-                                    <li> <a href="#"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a> </li>
+                                    <li>
+                                        <a href="index_02.html"><img src="img/radio_c.png" alt="img06" /><span>Аудиoролики</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="index_03.html"><img src="img/tv_c.png" alt="img06" /><span>Озвучание видео</span></a>
+                                    </li>
+                                    <li> <a href="index_loc.html"><img src="img/languages.png" alt="img09" /><span>Локализация и адаптация</span></a> </li>
+                                    <li>
+                                        <a href="index_04.html"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="index_05.html"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="index_08.html"><img src="img/print.png" alt="img06" /><span>Сценарии</span></a>
+                                    </li>
                                 </ul>
                             </li>
                             <li><a href="index_06.html">Оплата</a></li>
@@ -209,7 +216,6 @@
                     <div class="footer_mn">
                         <ul>
                             <li> <a href="index.html">Главная</a> </li>
-                            <li> <a href="index_01.html">Дикторы</a> </li>
                             <li> <a href="index_06.html">Оплата</a> </li>
                             <li> <a href="index_07.html">Контакты</a> </li>
                         </ul>
@@ -226,7 +232,7 @@
                         <span class="font_bsm">e-mail: </span>info@sila.fm <br>
                         <span class="font_bsm">В Москве: </span> +7 (495) 545-45-13 <br>
                         <span class="font_bsm">В России: </span> +7 (800) 551-0-551 <br>
-                        <span class="font_bsm">В Украине: </span> +3 (044) 545-77-13 <br>
+                        <span class="font_bsm">В Украине: </span> +38(044) 545-77-13 <br>
                         <span class="font_bsm">Viber/Whatsapp: </span>+7 965 316 1080<br>
                         <span class="font_bsm">skype: </span> sila.fm <br>
                         <span class="font_bsm">ICQ: </span> 322-653-493
